Pre-ready version of API version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,6 @@ set(CMAKE_CXX_STANDARD 14)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -fopenmp -fpermissive")
 
-add_executable(GB_Kun main.cpp)
+include_directories(src/common)
+
+add_executable(GB_Kun main.cpp src/common/matrix.hpp src/common/types.hpp src/helpers/utils.hpp src/common/vector.hpp src/backend/vector/vector.h src/common/descriptor.hpp src/common/types.hpp src/backend/descriptor/descriptor.h src/backend/la_backend.h src/common/operations.hpp src/backend/operations/operations.h)
