Raw version of C GraphBLAS API

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,9 +2,24 @@ cmake_minimum_required(VERSION 3.17)
 project(GB_Kun)
 
 set(CMAKE_CXX_STANDARD 14)
-
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -fopenmp -fpermissive")
 
-include_directories(src/common)
 
-add_executable(GB_Kun main.cpp src/common/matrix.hpp src/common/types.hpp src/helpers/utils.hpp src/common/vector.hpp src/backend/vector/vector.h src/common/descriptor.hpp src/common/types.hpp src/backend/descriptor/descriptor.h src/backend/la_backend.h src/common/operations.hpp src/backend/operations/operations.h)
+#backend root dir can be changed easily
+set(kun_backend_dir src/backend)
+
+
+set(desc_dir ${kun_backend_dir}/descriptor/)
+set(matrix_dir ${kun_backend_dir}/matrix/)
+set(operations_dir ${kun_backend_dir}/operations/)
+set(vector_dir ${kun_backend_dir}/vector/)
+set(spmv_dir ${kun_backend_dir}/spmv/)
+
+set(interface_dir src/common)
+
+add_executable(bfs bfs.cpp ${spmv_dir}/spmv.h ${vector_dir}/vector.h ${matrix_dir}/matrix.h ${desc_dir}/descriptor.h ${operations_dir}/operations.h)
+target_include_directories(bfs PRIVATE ${desc_dir} ${matrix_dir} ${operations_dir} ${vector_dir} ${spmv_dir})
+
+
+add_executable(spmv spmv.cpp ${spmv_dir}/spmv.h ${vector_dir}/vector.h ${matrix_dir}/matrix.h ${desc_dir}/descriptor.h ${operations_dir}/operations.h spmv.cpp)
+target_include_directories(spmv PRIVATE ${desc_dir} ${matrix_dir} ${operations_dir} ${vector_dir} ${spmv_dir})
