--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.11)
 project(GB_Kun)
 include(ProcessorCount)
 ProcessorCount(N)
+
+message(STATUS "Number of cores: ${N}")
 if(N EQUAL 48)
     set(CMAKE_CXX_STANDARD 14)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -std=c++14 -fno-trapping-math -fopenmp-simd -fopenmp  -ffreestanding -ffast-math -march=armv8.2-a -mtune=tsv110")
