--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ include(ProcessorCount)
 ProcessorCount(N)
 
 message(STATUS "Number of cores: ${N}")
-if(N EQUAL 48)
+if(N EQUAL 48 OR N EQUAL 64 OR N EQUAL 96 OR N EQUAL 128)
     set(CMAKE_CXX_STANDARD 14)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -std=c++14 -fno-trapping-math -fopenmp-simd -fopenmp  -ffreestanding -ffast-math -march=armv8.2-a -mtune=tsv110")
 else ()
