--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,3 +83,6 @@ target_include_directories(gen PRIVATE ${header_dir_list})
 
 add_executable(sparse_test sparse_test.cpp)
 target_include_directories(sparse_test PRIVATE ${header_dir_list})
+
+add_executable(saxpy saxpy.cpp)
+target_include_directories(saxpy PRIVATE ${header_dir_list})
