- before const cast

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,8 @@ ProcessorCount(N)
 message(STATUS "Number of cores: ${N}")
 if(N EQUAL 48 OR N EQUAL 64 OR N EQUAL 96 OR N EQUAL 128)
     set(CMAKE_CXX_STANDARD 14)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -std=c++14 -fno-trapping-math -fopenmp-simd -fopenmp  -ffreestanding -ffast-math -march=armv8.2-a -mtune=tsv110 -fpermissive")
+    #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -std=c++14 -fno-trapping-math -fopenmp-simd -fopenmp  -ffreestanding -ffast-math -march=armv8.2-a -mtune=tsv110 -fpermissive")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -std=c++14 -fno-trapping-math -fopenmp-simd -fopenmp  -ffreestanding -ffast-math -march=armv8.2-a -fpermissive")
 else ()
     set(CMAKE_CXX_STANDARD 14)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -fopenmp -fpermissive")
@@ -75,17 +76,8 @@ target_include_directories(bfs PRIVATE)
 add_executable(spmv spmv.cpp)
 target_include_directories(spmv PRIVATE)
 
-add_executable(locality locality_test.cpp)
-target_include_directories(locality PRIVATE)
+add_executable(pr pr.cpp)
+target_include_directories(pr PRIVATE)
 
 add_executable(gen gen.cpp)
 target_include_directories(gen PRIVATE)
-
-add_executable(sparse_test sparse_test.cpp)
-target_include_directories(sparse_test PRIVATE)
-
-add_executable(saxpy saxpy.cpp)
-target_include_directories(saxpy PRIVATE)
-
-add_executable(pr pr.cpp)
-target_include_directories(pr PRIVATE)
