--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,5 +93,8 @@ target_include_directories(sssp PRIVATE)
 add_executable(gen gen.cpp)
 target_include_directories(gen PRIVATE)
 
+add_executable(gemm gemm.cpp)
+target_include_directories(gemm PRIVATE)
+
 add_executable(sparse_test sparse_test.cpp)
 target_include_directories(sparse_test PRIVATE)
