--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -100,6 +100,6 @@ target_include_directories(gen PRIVATE)
 add_executable(gemm gemm.cpp)
 target_include_directories(gemm PRIVATE)
 
-add_executable(saxpy saxpy.cpp)
-target_include_directories(saxpy PRIVATE)
+add_executable(gather_tests gather_tests.cpp)
+target_include_directories(gather_tests PRIVATE)
 
