- spmspv buckets inserted

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -106,3 +106,6 @@ target_include_directories(gemm PRIVATE)
 add_executable(gather_tests gather_tests.cpp)
 target_include_directories(gather_tests PRIVATE)
 
+add_executable(sparse_test sparse_test.cpp)
+target_include_directories(sparse_test PRIVATE)
+
