--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -112,6 +112,9 @@ target_include_directories(transpose PRIVATE)
 add_executable(saxpy saxpy.cpp)
 target_include_directories(saxpy PRIVATE)
 
+add_executable(test_file_formats test_file_formats.cpp)
+target_include_directories(test_file_formats PRIVATE)
+
 if (NOT ${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 add_executable(test_matrix tests/GB_objects/test_matrix_ops.cpp)
 target_link_libraries(test_matrix ${GTEST_LIBRARIES})
