added Lagraph sssp implementation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -111,6 +111,10 @@ target_include_directories(switch_test PRIVATE)
 
 #if (NOT ${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 #add_executable(test_matrix tests/GB_objects/test_matrix_ops.cpp)
+add_executable(sssp_lagraph sssp_lagraph.cpp)
+target_include_directories(sssp_lagraph PRIVATE)
+
+#add_executable(test_matrix test/GB_objects/test_matrix_ops.cpp)
 #target_link_libraries(test_matrix ${GTEST_LIBRARIES})
 
 #add_executable(test_primitives tests/primitives/test_primitives.cpp)
