--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -116,10 +116,10 @@ add_executable(test_file_formats test_file_formats.cpp)
 target_include_directories(test_file_formats PRIVATE)
 
 if (NOT ${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-add_executable(test_matrix tests/GB_objects/test_matrix_ops.cpp)
-target_link_libraries(test_matrix ${GTEST_LIBRARIES})
+#add_executable(test_matrix tests/GB_objects/test_matrix_ops.cpp)
+#target_link_libraries(test_matrix ${GTEST_LIBRARIES})
 
-add_executable(test_primitives tests/primitives/test_primitives.cpp)
-target_link_libraries(test_primitives ${GTEST_LIBRARIES})
+#add_executable(test_primitives tests/primitives/test_primitives.cpp)
+#target_link_libraries(test_primitives ${GTEST_LIBRARIES})
 endif()
 
