[Doxygen] auto generation testing 5.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
           # Path to Doxyfile
           doxyfile-path: "./algorithms/Doxyfile"
           # Working directory
-          working-directory: "./algorithms" # default is .
+          working-directory: "." # default is .
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
@@ -36,4 +36,4 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           # Default Doxyfile build documentation to html directory.
           # Change the directory if changes in Doxyfile
-          publish_dir: ./html
+          publish_dir: ./algorithms/documentaion/html
