[CMAKE TBB] Changed strategy to detect TBB
Changed strategy to detect TBB

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.11)
 project(GB_Kun)
+include(CheckIncludeFileCXX)
+CHECK_INCLUDE_FILE_CXX("tbb/info.h" TBB_EXISTS)
 include(ProcessorCount)
 ProcessorCount(N)
 
@@ -15,7 +17,7 @@ else ()
     if(N EQUAL 48 OR N EQUAL 64 OR N EQUAL 96 OR N EQUAL 128)
         message("COMPILING FOR KUNPENG 920")
         set(CMAKE_CXX_STANDARD 17)
-        if(DEFINED ENV{TBBROOT})
+        if(TBB_EXISTS)
             set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D __USE_KUNPENG__ -D MAX_CORES=${N} -O3 -std=c++17 -fno-trapping-math -fopenmp-simd -fopenmp -ffreestanding -ffast-math -march=armv8.2-a -fpermissive -fprefetch-loop-arrays -ltbb -D __USE_TBB__")
         else()
             set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D __USE_KUNPENG__ -D MAX_CORES=${N} -O3 -std=c++17 -fno-trapping-math -fopenmp-simd -fopenmp -ffreestanding -ffast-math -march=armv8.2-a -fpermissive -fprefetch-loop-arrays")
