--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,17 @@
 cmake_minimum_required(VERSION 3.11)
 project(GB_Kun)
+include(CheckIncludeFileCXX)
+CHECK_INCLUDE_FILE_CXX("tbb/info.h" TBB_EXISTS)
 include(ProcessorCount)
 ProcessorCount(N)
+
+find_package(GTest)
+if(GTest_FOUND)
+    include_directories(${GTEST_INCLUDE_DIRS})
+endif()
+if (GTest_FOUND)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D __USE_GTEST__")
+endif()
 
 message("${CMAKE_CXX_COMPILER_ID}")
 message("${CMAKE_CXX_COMPILER}")
@@ -15,7 +25,11 @@ else ()
     if(N EQUAL 48 OR N EQUAL 64 OR N EQUAL 96 OR N EQUAL 128)
         message("COMPILING FOR KUNPENG 920")
         set(CMAKE_CXX_STANDARD 17)
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D __USE_KUNPENG__ -D MAX_CORES=${N} -O3 -std=c++17 -fno-trapping-math -fopenmp-simd -fopenmp -ffreestanding -ffast-math -march=armv8.2-a -fpermissive -fprefetch-loop-arrays -ltbb")
+        if(TBB_EXISTS)
+            set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D __USE_KUNPENG__ -D MAX_CORES=${N} -O3 -std=c++17 -fno-trapping-math -fopenmp-simd -fopenmp -ffreestanding -ffast-math -march=armv8.2-a -fpermissive -fprefetch-loop-arrays -ltbb -D __USE_TBB__")
+        else()
+            set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D __USE_KUNPENG__ -D MAX_CORES=${N} -O3 -std=c++17 -fno-trapping-math -fopenmp-simd -fopenmp -ffreestanding -ffast-math -march=armv8.2-a -fpermissive -fprefetch-loop-arrays")
+        endif()
     else ()
         message("CLION compilation") # this is for local testing
         set(CMAKE_CXX_STANDARD 17)
@@ -74,40 +88,41 @@ STRING(REPLACE ";" " " headers_list "${headers_list}")
 STRING(REPLACE "${PROJECT_SOURCE_DIR}/" "" headers_list "${headers_list}")
 #message(STATUS "[INFO] header files list: ${headers_list}")
 #
-find_package(GTest REQUIRED)
-include_directories(${GTEST_INCLUDE_DIRS})
 
 file(MAKE_DIRECTORY benchmark/integration_scripts)
 
-add_executable(cc cc.cpp tests/gtest/mxv_test.cpp)
+add_executable(cc cc.cpp)
 target_include_directories(cc PRIVATE)
 
-add_executable(bfs bfs.cpp tests/gtest/mxv_test.cpp)
+add_executable(bfs bfs.cpp)
 target_include_directories(bfs PRIVATE)
 
-add_executable(spmv spmv.cpp tests/gtest/mxv_test.cpp)
+add_executable(spmv spmv.cpp)
 target_include_directories(spmv PRIVATE)
 
-add_executable(pr pr.cpp tests/gtest/mxv_test.cpp)
+add_executable(pr pr.cpp)
 target_include_directories(pr PRIVATE)
 
-add_executable(sssp sssp.cpp tests/gtest/mxv_test.cpp)
+add_executable(sssp sssp.cpp)
 target_include_directories(sssp PRIVATE)
 
-add_executable(gen gen.cpp tests/gtest/mxv_test.cpp)
+add_executable(gen gen.cpp)
 target_include_directories(gen PRIVATE)
 
-add_executable(gemm gemm.cpp tests/gtest/mxv_test.cpp)
+add_executable(gemm gemm.cpp)
 target_include_directories(gemm PRIVATE)
 
-add_executable(tc tc.cpp tc.cpp tests/gtest/mxv_test.cpp)
+add_executable(tc tc.cpp tc.cpp)
 target_include_directories(tc PRIVATE)
 
-add_executable(transpose transpose.cpp tests/gtest/mxv_test.cpp)
+add_executable(transpose transpose.cpp)
 target_include_directories(transpose PRIVATE)
 
-add_executable(switch_test switch_test.cpp tests/gtest/mxv_test.cpp)
+add_executable(switch_test switch_test.cpp)
 target_include_directories(switch_test PRIVATE)
+
+add_executable(unit_tests unit_tests.cpp)
+target_include_directories(unit_tests PRIVATE)
 
 #if (NOT ${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 #add_executable(test_matrix tests/GB_objects/test_matrix_ops.cpp)
